fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -2068,7 +2068,7 @@ margin-top: 150px;
 }
 
 .spacing {
-	height: 100px;
+	height: 50px;
 }
 
 
